@startuml

class DeclarativeSentence


class Claim
Claim "*" o--* "*" DeclarativeSentence : equivalence

DeclarativeSentence "*" --> "*" DeclarativeSentence : equivalent
(DeclarativeSentence , DeclarativeSentence) . SentenceRelation

class Argument
Argument o--> "*" Claim : premises
Argument o--> "1" Claim : conclusion

@enduml
